--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "set PORT=5000 && next start",
+    "test": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.18",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.45.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
