--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.18",
+    "autoprefixer": "^10.4.0",
     "next": "12.0.7",
+    "postcss": "^8.2.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.45.1",
-    "styled-components": "^5.3.3"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
+    "@types/react-slick": "^0.23.7",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
